Update scripts with catalina opts